[metadata]
name = ovs-utils
version = 2022.04.28
summary = OpenLAN Network Solutions
description-file =
    README.md
author = Daniel Ding
author-email = danieldin95@163.com
python-requires = >=2.7
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenLAN
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    ovs-utils
data_files =
    share/ovs-utils =
        LICENSE
        requirements.txt

[entry_points]
console_scripts =
    ovs-iftop = ovs_utils.cmd.ovs_iftop:main
